# Test-Bench-Automation

./: .gitattributes  .gitignore  LICENSE  README.md  README.txt  diagnose.py  example.py  example2.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_instrument.md
.github/workflows/: ci.yml
dashboard/: README.md  requirements.txt  ui_server.py
dashboard/static/: index.html
instruments/: README.txt  pyproject.toml  requirements.txt
instruments/visacom/: __init__.py  base.py  fluke.py  keysight.py
visacom/: __init__.py  discover.py  fluke.py  hioki.py  keysight.py  manager.py  yokogawa.py
